correct element overflowing parent

--- a/JS bootcamp - robMeril/DogTherapy/style.css
+++ b/JS bootcamp - robMeril/DogTherapy/style.css
@@ -1,9 +1,11 @@
 ﻿.container{
     max-width:50%;
+
 }
 
 main{
-max-height: 600px;
+    max-height: 700px;
+    box-sizing: border-box;
 }
 
 .btn{
@@ -20,7 +22,6 @@ a{
 .dogWrapper{
     background-color: white;
     color:black;
-    max-height:100%;
 }
 
 body{
@@ -29,5 +30,5 @@ body{
 }
 
 img{
-    max-height: 100%;
+    max-height: 85%;
 }
